create random prducts by shops functionality